[gd_scene load_steps=7 format=3 uid="uid://bqmb5hl4t7an7"]

[ext_resource type="StyleBox" uid="uid://dhnntrgk1ibsi" path="res://scenes/ui/party_view.tres" id="1_14r75"]
[ext_resource type="Script" uid="uid://clse4e1sh834d" path="res://scenes/ui/party_view.gd" id="1_t4b5c"]
[ext_resource type="PackedScene" uid="uid://d3cicaw1y6yaw" path="res://scenes/ui/card_amt_container.tscn" id="3_qqbqt"]
[ext_resource type="PackedScene" uid="uid://br5d3fpwymqac" path="res://scenes/ui/pokemon_container.tscn" id="4_14r75"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x0w6n"]
bg_color = Color(0, 0, 0, 0.708)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.353, 0.344, 0.32, 0)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_14r75"]
bg_color = Color(0.6, 0.6, 0.6, 0)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="PartyView" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_t4b5c")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.635294)

[node name="topbarmarker" type="PanelContainer" parent="."]
visible = false
custom_minimum_size = Vector2(0, 36)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1.0
offset_bottom = -252.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_x0w6n")

[node name="BackButton" type="Button" parent="."]
unique_name_in_owner = true
z_index = 12
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -56.0
offset_top = 6.0
offset_right = -16.0
offset_bottom = 26.0
grow_horizontal = 0
text = "Back"

[node name="Cards" type="PanelContainer" parent="."]
layout_mode = 2
offset_left = 221.0
offset_top = 42.0
offset_right = 498.0
offset_bottom = 239.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = ExtResource("1_14r75")

[node name="ScrollContainer" type="ScrollContainer" parent="Cards"]
layout_mode = 2

[node name="CardGridContainer" type="GridContainer" parent="Cards/ScrollContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(185, 185)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 25
columns = 4

[node name="CardAmtContainer" parent="Cards/ScrollContainer/CardGridContainer" instance=ExtResource("3_qqbqt")]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 33.0
offset_right = 298.0
offset_bottom = 248.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 0
theme_override_constants/margin_bottom = 0

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_14r75")
horizontal_scroll_mode = 0

[node name="PartyPokemonContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 19

[node name="PokemonContainer" parent="MarginContainer/ScrollContainer/PartyPokemonContainer" instance=ExtResource("4_14r75")]
unique_name_in_owner = true
layout_mode = 2
